FIx background color behind notch

--- a/style.css
+++ b/style.css
@@ -50,6 +50,19 @@ body {
 	background: linear-gradient(to bottom, #000000, #d3d3d3);
 	background-attachment: fixed;
 	width: 100%;
+
+	--safe-area-inset-top: env(safe-area-inset-top);
+	--safe-area-inset-right: env(safe-area-inset-right);
+	--safe-area-inset-bottom: env(safe-area-inset-bottom);
+	--safe-area-inset-left: env(safe-area-inset-left);
+
+	padding-top: var(--safe-area-inset-top);
+	padding-right: var(--safe-area-inset-right);
+	padding-bottom: var(--safe-area-inset-bottom);
+	padding-left: var(--safe-area-inset-left);
+
+	/* Set the color behind the notch */
+	background-color: black;
 }
 
 .main {
